--- a/website/blog/2019-11-15-New-Insert-Update-Delete-Data-on-S3-with-Amazon-EMR-and-Apache-Hudi.mdx
+++ b/website/blog/2019-11-15-New-Insert-Update-Delete-Data-on-S3-with-Amazon-EMR-and-Apache-Hudi.mdx
@@ -2,7 +2,7 @@
 title: "New – Insert, Update, Delete Data on S3 with Amazon EMR and Apache Hudi"
 authors:
 - name: Danilo Poccia
-category: deep-dive
+category: how-to
 image: /assets/images/blog/aws.jpg
 tags:
 - aws
