--- a/website/blog/2020-06-16-Apache-Hudi-grows-cloud-data-lake-maturity.mdx
+++ b/website/blog/2020-06-16-Apache-Hudi-grows-cloud-data-lake-maturity.mdx
@@ -2,7 +2,7 @@
 title: "Apache Hudi grows cloud data lake maturity"
 authors:
 - name: Sean Michael Kerner
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2020-06-16-Apache-Hudi-grows-cloud-data-lake-maturity.jpeg
 tags:
 - data lakehouse
