--- a/website/blog/2020-08-04-PrestoDB-and-Apache-Hudi.mdx
+++ b/website/blog/2020-08-04-PrestoDB-and-Apache-Hudi.mdx
@@ -3,7 +3,7 @@ title: "PrestoDB and Apache Hudi"
 authors:
 - name: Bhavani Sudha Saktheeswaran
 - name: Brandon Scheller
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2020-08-04-PrestoDB-and-Apache-Hudi.png
 tags:
 - presto
