--- a/website/blog/2021-03-01-Data-Lakehouse-Building-the-Next-Generation-of-Data-Lakes-using-Apache-Hudi.mdx
+++ b/website/blog/2021-03-01-Data-Lakehouse-Building-the-Next-Generation-of-Data-Lakes-using-Apache-Hudi.mdx
@@ -3,7 +3,7 @@ title: "Data Lakehouse: Building the Next Generation of Data Lakes using Apache 
 authors:
 - name: Ryan D'Souza
 - name: Brandon Stanley
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2021-03-01-Data-Lakehouse-Building-the-Next-Generation-of-Data-Lakes-using-Apache-Hudi.png
 tags:
 - data lakehouse
