--- a/website/blog/2021-05-12-Experts-primer-on-Apache-Hudi.mdx
+++ b/website/blog/2021-05-12-Experts-primer-on-Apache-Hudi.mdx
@@ -2,7 +2,7 @@
 title: "Experts primer on Apache Hudi"
 authors:
 - name: Stephanie Simone
-category: deep-dive
+category: how-to
 image: /assets/images/blog/data-summit-connect.jpeg
 tags:
 - beginner
