--- a/website/blog/2021-08-03-MLOps-Wars-Versioned-Feature-Data-with-a-Lakehouse.mdx
+++ b/website/blog/2021-08-03-MLOps-Wars-Versioned-Feature-Data-with-a-Lakehouse.mdx
@@ -3,7 +3,7 @@ title: "MLOps Wars: Versioned Feature Data with a Lakehouse"
 authors:
 - name: David Bzhalava
 - name: Jim Dowling
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2021-08-03-mlops-wars.png
 tags:
 - mlops
