--- a/website/blog/2021-10-05-Data-Platform-2.0-Part-I.mdx
+++ b/website/blog/2021-10-05-Data-Platform-2.0-Part-I.mdx
@@ -2,7 +2,7 @@
 title: "Data Platform 2.0 - Part I"
 authors:
 - name: Jitendra Shah
-category: deep-dive
+category: case-study
 image: /assets/images/blog/2021-10-05-data-platform-2-0-part-1.png
 tags:
 - halodoc
