--- a/website/blog/2021-12-31-The-Art-of-Building-Open-Data-Lakes-with-Apache-Hudi-Kafka-Hive-and-Debezium.mdx
+++ b/website/blog/2021-12-31-The-Art-of-Building-Open-Data-Lakes-with-Apache-Hudi-Kafka-Hive-and-Debezium.mdx
@@ -2,7 +2,7 @@
 title: "The Art of Building Open Data Lakes with Apache Hudi, Kafka, Hive, and Debezium"
 authors:
 - name: Gary Stafford
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2021-12-31-open-source-data-lakes-on-aws.png
 tags:
 - data lakehouse
