--- a/website/blog/2022-02-17-Fresher-Data-Lake-on-AWS-S3.mdx
+++ b/website/blog/2022-02-17-Fresher-Data-Lake-on-AWS-S3.mdx
@@ -2,7 +2,7 @@
 title: "Fresher Data Lake on AWS S3"
 authors:
 - name: Balaji Varadarajan
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2022-02-17-fresher-data-lake-on-aws-s3.png
 tags:
 - incremental processing
