--- a/website/blog/2022-03-24-Zendesk-Insights-for-CTOs-Part-3-Growing-your-business-with-modern-data-capabilities.mdx
+++ b/website/blog/2022-03-24-Zendesk-Insights-for-CTOs-Part-3-Growing-your-business-with-modern-data-capabilities.mdx
@@ -3,7 +3,7 @@ title: "Zendesk - Insights for CTOs: Part 3 – Growing your business with moder
 authors:
 - name: Syed Jaffry
 - name: Johnathan Hwang
-category: deep-dive
+category: case-study
 image: /assets/images/blog/2022-03-24-insights-for-ctos-part-3.png
 tags:
 - modern data architecture
