--- a/website/blog/2022-08-12-Use-Flink-Hudi-to-Build-a-Streaming-Data-Lake-Platform.mdx
+++ b/website/blog/2022-08-12-Use-Flink-Hudi-to-Build-a-Streaming-Data-Lake-Platform.mdx
@@ -3,7 +3,7 @@ title: "Use Flink Hudi to Build a Streaming Data Lake Platform"
 authors:
 - name:  Chen Yuzhao
 - name: Liu Dalong
-category: deep-dive
+category: case-study
 image: /assets/images/blog/2022-08-12-Use-Flink-Hudi-to-Build-a-Streaming-Data-Lake-Platform.png
 tags:
 - apache flink
