--- a/website/blog/2022-09-20-Building-Streaming-Data-Lakes-with-Hudi-and-MinIO.mdx
+++ b/website/blog/2022-09-20-Building-Streaming-Data-Lakes-with-Hudi-and-MinIO.mdx
@@ -2,7 +2,7 @@
 title: "Building Streaming Data Lakes with Hudi and MinIO"
 authors:
 - name: Matt Sarrel
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2022-09-20_streaming_data_lakes_with_hudi_and_minio.png
 tags:
 - data lakehouse
