--- a/website/blog/2022-09-28-Data-processing-with-Spark-time-traveling.mdx
+++ b/website/blog/2022-09-28-Data-processing-with-Spark-time-traveling.mdx
@@ -2,7 +2,7 @@
 title: "Data processing with Spark: time traveling"
 authors:
 - name: Petrica Leuca
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2022-09-28_Data_processing_with_Spark_time_traveling.png
 tags:
 - querying
