--- a/website/blog/2023-04-29-can-you-concurrently-write-data-to-apache-hudi-w-o-any-lock-provider.mdx
+++ b/website/blog/2023-04-29-can-you-concurrently-write-data-to-apache-hudi-w-o-any-lock-provider.mdx
@@ -2,7 +2,7 @@
 title: "Can you concurrently write data to Apache Hudi w/o any lock provider?"
 authors:
 - name: Sivabalan Narayanan
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2023-04-29-can-you-concurrently-write-data-to-apache-hudi-w-o-any-lock-provider.gif
 tags:
 - concurrency control
