--- a/website/blog/2023-05-02-intro-to-hudi-and-flink.mdx
+++ b/website/blog/2023-05-02-intro-to-hudi-and-flink.mdx
@@ -2,7 +2,7 @@
 title: "An Introduction to the Hudi and Flink Integration"
 authors:
 - name: Danny Chan
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2023-05-02-intro-to-hudi-and-flink.png
 tags:
 - apache flink
