--- a/website/blog/2023-05-03-lakehouse-at-fortune-1-scale.mdx
+++ b/website/blog/2023-05-03-lakehouse-at-fortune-1-scale.mdx
@@ -2,7 +2,7 @@
 title: "Lakehouse at Fortune 1 Scale"
 authors:
 - name: Samuel Guleff
-category: deep-dive
+category: case-study
 image: /assets/images/blog/2023-05-03-lakehouse-at-fortune-1-scale.jpeg
 tags:
 - walmart
