--- a/website/blog/2023-05-10-top-3-things-you-can-do-to-get-fast-upsert-performance-in-apache-hudi.mdx
+++ b/website/blog/2023-05-10-top-3-things-you-can-do-to-get-fast-upsert-performance-in-apache-hudi.mdx
@@ -2,7 +2,7 @@
 title: "Top 3 Things You Can Do to Get Fast Upsert Performance in Apache Hudi"
 authors:
 - name: Nadine Farah
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2023-05-10-top-3-things-you-can-do-to-get-fast-upsert-performance-in-apache-hudi.png
 tags:
 - performance
