--- a/website/blog/2023-06-03-text-based-search-from-elastic-search-to-vector-search.mdx
+++ b/website/blog/2023-06-03-text-based-search-from-elastic-search-to-vector-search.mdx
@@ -2,7 +2,7 @@
 title: "Text-Based Search: From Elastic Search to Vector Search"
 authors:
 - name: Kaushik Muniandi
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2023-06-03-text-based-search-from-elastic-search-to-vector-search.png
 tags:
 - vector search
