--- a/website/blog/2023-07-08-Quickly-start-using-Apache-Hudi-on-AWS-EMR.mdx
+++ b/website/blog/2023-07-08-Quickly-start-using-Apache-Hudi-on-AWS-EMR.mdx
@@ -2,7 +2,7 @@
 title: "Quickly start using Apache Hudi on AWS EMR"
 authors:
 - name: Ritik Kaushik
-category: deep-dive
+category: how-to
 tags:
 - aws
 - cow
