--- a/website/blog/2023-07-21-AWS-Glue-Crawlers-now-supports-Apache-Hudi-Tables.mdx
+++ b/website/blog/2023-07-21-AWS-Glue-Crawlers-now-supports-Apache-Hudi-Tables.mdx
@@ -2,7 +2,7 @@
 title: "AWS Glue Crawlers now supports Apache Hudi Tables"
 authors:
 - name: AWS Team
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2023-07-21-AWS-Glue-Crawlers-now-supports-Apache-Hudi-Tables.png
 tags:
 - aws
