--- a/website/blog/2023-08-31-Incremental-Queries-with-Apache-Hudi-and-Apache-Flink.mdx
+++ b/website/blog/2023-08-31-Incremental-Queries-with-Apache-Hudi-and-Apache-Flink.mdx
@@ -2,7 +2,7 @@
 title: "Incremental Queries with Apache Hudi and Apache Flink"
 excerpt: "Incremental Queries with Apache Hudi and Apache Flink"
 author: nello
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2023-08-31-Incremental-Queries-with-Apache-Hudi-and-Apache-Flink.png
 tags:
 - querying
