--- a/website/blog/2023-09-13-Simplify-operational-data-processing-in-data-lakes-using-AWS-Glue-and-Apache-Hudi.mdx
+++ b/website/blog/2023-09-13-Simplify-operational-data-processing-in-data-lakes-using-AWS-Glue-and-Apache-Hudi.mdx
@@ -4,7 +4,7 @@ excerpt: "Use AWS Glue and Apache Hudi for data processing"
 authors: 
 - name: Srinivas Kandi
 - name: Ravi Itha
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2023-09-13-Simplify-operational-data-processing-in-data-lakes-using-AWS-Glue-and-Apache-Hudi.png
 tags:
 - aws
