--- a/website/blog/2024-01-09-introduction-to-apache-hudi.mdx
+++ b/website/blog/2024-01-09-introduction-to-apache-hudi.mdx
@@ -2,7 +2,7 @@
 title: "Introduction to Apache Hudi"
 excerpt: "Introduction to Apache Hudi"
 author: Andrew Savchyns
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2024-01-09-introduction-to-apache-hudi.png
 tags:
 - beginner
