--- a/website/blog/2024-05-10-building-analytical-apps-on-the-lakehouse-using-apache-hudi-daft-streamlit.mdx
+++ b/website/blog/2024-05-10-building-analytical-apps-on-the-lakehouse-using-apache-hudi-daft-streamlit.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Building Analytical Apps on the Lakehouse using Apache Hudi, Daft & Streamlit"
 authors: [dipankar-mazumdar]
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2024-05-10-building-analytical-apps-on-the-lakehouse-using-apache-hudi-daft-streamlit.png
 tags:
 - python
