--- a/website/blog/2024-05-22-use-aws-data-exchange-to-seamlessly-share-apache-hudi-datasets.mdx
+++ b/website/blog/2024-05-22-use-aws-data-exchange-to-seamlessly-share-apache-hudi-datasets.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Use AWS Data Exchange to seamlessly share Apache Hudi datasets"
 author: Saurabh Bhutyani, Ankith Ede, and Chandra Krishnan
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2024-05-22-use-aws-data-exchange-to-seamlessly-share-apache-hudi-datasets.png
 tags:
 - data sharing
