--- a/website/blog/2024-10-22-exploring-time-travel-queries-in-apache-hudi.mdx
+++ b/website/blog/2024-10-22-exploring-time-travel-queries-in-apache-hudi.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Exploring Time Travel Queries in Apache Hudi"
 author: Ramneek Kaur
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2024-10-22-exploring-time-travel-queries-in-apache-hudi.jpeg
 tags:
 - querying
