--- a/website/blog/2024-10-27-I-spent-5-hours-exploring-the-story-behind-Apache-Hudi.mdx
+++ b/website/blog/2024-10-27-I-spent-5-hours-exploring-the-story-behind-Apache-Hudi.mdx
@@ -11,5 +11,5 @@ tags:
 
 import Redirect from '@site/src/components/Redirect';
 
-<Redirect url="https://blog.det.life/i-spent-5-hours-exploring-the-story-behind-apache-hudi-dacad829394d">Redirecting... please wait!! </Redirect>
+<Redirect url="https://vutr.substack.com/p/i-spent-5-hours-exploring-the-story">Redirecting... please wait!! </Redirect>
 
