--- a/website/blog/2024-12-04-use-open-table-format-libraries-on-aws-glue-5-0-for-apache-spark.mdx
+++ b/website/blog/2024-12-04-use-open-table-format-libraries-on-aws-glue-5-0-for-apache-spark.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Use open table format libraries on AWS Glue 5.0 for Apache Spark"
 author: Sotaro Hikita and  Noritaka Sekiyama
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2024-12-04-use-open-table-format-libraries-on-aws-glue-5-0-for-apache-spark.png
 tags:
 - announcement
