--- a/website/blog/2025-04-14-doris-hudi-making-impossible-possible.mdx
+++ b/website/blog/2025-04-14-doris-hudi-making-impossible-possible.mdx
@@ -1,7 +1,7 @@
 ---
 title: "How Doris + Hudi Turned the Impossible Into the Everyday"
 author: Zen Hua
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2025-04-03-integrate-apache-doris-hudi-data-querying-migration.png
 tags:
 - apache doris
