--- a/website/blog/2025-06-13-Optimizing-Apache-Hudi-Workflows-Automation-for-Clustering-Resizing-Concurrency.mdx
+++ b/website/blog/2025-06-13-Optimizing-Apache-Hudi-Workflows-Automation-for-Clustering-Resizing-Concurrency.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Optimizing Apache Hudi Workflows: Automation for Clustering, Resizing & Concurrency"
 author: Halodoc, Apache Hudi
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2025-06-13-Optimizing-Apache-Hudi-Workflows-Automation-for-Clustering-Resizing-Concurrency.png
 tags:
 - halodoc
