--- a/website/blog/2025-07-10-building-a-rag-based-ai-recommender.mdx
+++ b/website/blog/2025-07-10-building-a-rag-based-ai-recommender.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Building a RAG-based AI Recommender (Part 1/2)"
 authors: [xushiyan]
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2025-07-10-building-a-rag-based-ai-recommender.png
 tags:
 - ai
