--- a/website/blog/2026-01-15-funding-circle.mdx
+++ b/website/blog/2026-01-15-funding-circle.mdx
@@ -2,7 +2,7 @@
 title: "From Legacy to Leading: Funding Circle's Journey with Apache Hudi"
 excerpt: ""
 author: The Hudi Community
-category: community
+category: case-study
 image: /assets/images/blog/2026-01-15-funding-circle/01-hudi-sync-funding-circle.png
 tags:
 - data lakehouse
