--- a/website/blog/2021-03-11-New-features-from-Apache-hudi-in-Amazon-EMR.mdx
+++ b/website/blog/2021-03-11-New-features-from-Apache-hudi-in-Amazon-EMR.mdx
@@ -2,7 +2,7 @@
 title: "New features from Apache hudi in Amazon EMR"
 authors:
 - name: Udit Mehrotra
-category: deep-dive
+category: how-to
 image: /assets/images/blog/aws.jpg
 tags:
 - aws
