--- a/website/blog/2021-07-16-Amazon-Athena-expands-Apache-Hudi-support.mdx
+++ b/website/blog/2021-07-16-Amazon-Athena-expands-Apache-Hudi-support.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Amazon Athena expands Apache Hudi support"
 author: AWS
-category: deep-dive
+category: how-to
 image: /assets/images/blog/aws.jpg
 tags:
 - aws
