--- a/website/blog/2021-12-20-New-features-from-Apache-Hudi-0.7.0-and-0.8.0-available-on-Amazon-EMR.mdx
+++ b/website/blog/2021-12-20-New-features-from-Apache-Hudi-0.7.0-and-0.8.0-available-on-Amazon-EMR.mdx
@@ -3,7 +3,7 @@ title: "New features from Apache Hudi 0.7.0 and 0.8.0 available on Amazon EMR"
 authors:
 - name: Udit Mehrotra
 - name: Gagan Brahmi
-category: deep-dive
+category: how-to
 image: /assets/images/blog/aws.jpg
 tags:
 - aws
