--- a/website/blog/2022-01-14-change-data-capture-with-debezium-and-apache-hudi.mdx
+++ b/website/blog/2022-01-14-change-data-capture-with-debezium-and-apache-hudi.mdx
@@ -2,7 +2,7 @@
 title: "Change Data Capture with Debezium and Apache Hudi"
 excerpt: "A review of new Debezium source connector for Apache Hudi"
 authors: [rajesh-mahindra]
-category: deep-dive
+category: how-to
 image: /assets/images/blog/debezium.png
 tags:
 - hudi streamer
