--- a/website/blog/2022-04-04-New-features-from-Apache-Hudi-0.9.0-on-Amazon-EMR.mdx
+++ b/website/blog/2022-04-04-New-features-from-Apache-Hudi-0.9.0-on-Amazon-EMR.mdx
@@ -4,7 +4,7 @@ authors:
 - name: Kunal Gautam
 - name: Gabriele Cacciola
 - name: Udit Mehrotra
-category: deep-dive
+category: how-to
 image: /assets/images/blog/aws.jpg
 tags:
 - aws
