--- a/website/blog/2023-02-19-bulk-insert-sort-modes-with-apache-hudi.mdx
+++ b/website/blog/2023-02-19-bulk-insert-sort-modes-with-apache-hudi.mdx
@@ -2,7 +2,7 @@
 title: "Bulk Insert Sort Modes with Apache Hudi"
 authors:
 - name: Sivabalan Narayanan
-category: deep-dive
+category: how-to
 tags:
 - dml
 ---
