--- a/website/blog/2023-03-20-Introducing-native-support-for-Apache-Hudi-Delta-Lake-and-Apache-Iceberg-on-AWS-Glue-for-Apache-Spark-Part-2-AWS-Glue-Studio-Visual-Editor.mdx
+++ b/website/blog/2023-03-20-Introducing-native-support-for-Apache-Hudi-Delta-Lake-and-Apache-Iceberg-on-AWS-Glue-for-Apache-Spark-Part-2-AWS-Glue-Studio-Visual-Editor.mdx
@@ -4,7 +4,7 @@ authors:
 - name: Noritaka Sekiyama
 - name: Scott Long
 - name: Sean Ma
-category: deep-dive
+category: how-to
 image: /assets/images/blog/native-support-hudi-for-glue-studio.png
 tags:
 - aws
