--- a/website/blog/2023-04-07-Speed-up-your-write-latencies-using-Bucket-Index-in-Apache-Hudi.mdx
+++ b/website/blog/2023-04-07-Speed-up-your-write-latencies-using-Bucket-Index-in-Apache-Hudi.mdx
@@ -2,7 +2,7 @@
 title: "Speed up your write latencies using Bucket Index in Apache Hudi"
 authors: 
 - name: Sivabalan Narayanan
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2023-04-07-Speed-up-your-write-latencies-using-Bucket-Index-in-Apache-Hudi.png
 tags:
 - indexing
