--- a/website/blog/2023-05-09-amazon-athena-apache-hudi.mdx
+++ b/website/blog/2023-05-09-amazon-athena-apache-hudi.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Amazon Athena now supports Apache Hudi 0.12.2"
 author: AWS
-category: deep-dive
+category: how-to
 image: /assets/images/blog/aws.jpg
 tags:
 - aws
