--- a/website/blog/2023-06-16-Exploring-New-Frontiers-How-Apache-Flink-Apache-Hudi-and-Presto-Power-New-Insights-at-Scale.mdx
+++ b/website/blog/2023-06-16-Exploring-New-Frontiers-How-Apache-Flink-Apache-Hudi-and-Presto-Power-New-Insights-at-Scale.mdx
@@ -2,7 +2,7 @@
 title: "Exploring New Frontiers: How Apache Flink, Apache Hudi and Presto Power New Insights at Scale"
 authors:
 - name: Nadine Farah
-category: case-study
+category: how-to
 image: /assets/images/blog/2023-06-16-Exploring-New-Frontiers-How-Apache-Flink-Apache-Hudi-and-Presto-Power-New-Insights-at-Scale.png
 tags:
 - apache flink
