--- a/website/blog/2023-07-02-Hudi-Best-Practices-Handling-Failed-Inserts-Upserts-with-Error-Tables.mdx
+++ b/website/blog/2023-07-02-Hudi-Best-Practices-Handling-Failed-Inserts-Upserts-with-Error-Tables.mdx
@@ -2,7 +2,7 @@
 title: "Hudi Best Practices: Handling Failed Inserts/Upserts with Error Tables"
 authors:
 - name: Soumil Shah
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2023-07-02-Hudi-Best-Practices-Handling-Failed-Inserts-Upserts-with-Error-Tables.png
 tags:
 - dml
