--- a/website/blog/2023-07-07-Skip-rocks-and-files-Turbocharge-Trino-queries-with-Hudi-multi-modal-indexing-subsystem.mdx
+++ b/website/blog/2023-07-07-Skip-rocks-and-files-Turbocharge-Trino-queries-with-Hudi-multi-modal-indexing-subsystem.mdx
@@ -4,7 +4,7 @@ authors:
 - name: Nadine Farah
 - name: Sagar Sumit
 - name:  Cole Bowden
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2023-07-07-Skip-rocks-and-files-Turbocharge-Trino-queries-with-Hudi-multi-modal-indexing-subsystem.png
 tags:
 - conference
