--- a/website/blog/2023-10-17-Get-started-with-Apache-Hudi-using-AWS-Glue-by-implementing-key-design-concepts-Part-1.mdx
+++ b/website/blog/2023-10-17-Get-started-with-Apache-Hudi-using-AWS-Glue-by-implementing-key-design-concepts-Part-1.mdx
@@ -4,7 +4,7 @@ excerpt: "Get started with Apache Hudi using AWS Glue by implementing key design
 authors:
     - name: Srinivas Kandi
     - name: Ravi Itha
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2023-10-17-Get-started-with-Apache-Hudi-using-AWS-Glue-by-implementing-key-design-concepts-Part-1.png
 tags:
 - dml
