--- a/website/blog/2023-11-22-Introducing-Apache-Hudi-support-with-AWS-Glue-crawlers.mdx
+++ b/website/blog/2023-11-22-Introducing-Apache-Hudi-support-with-AWS-Glue-crawlers.mdx
@@ -2,7 +2,7 @@
 title: "Introducing Apache Hudi support with AWS Glue crawlers"
 excerpt: "Introducing Apache Hudi support with AWS Glue crawlers"
 author: Noritaka Sekiyama, Kyle Duong, Sandeep Adwankar
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2023-11-22-Introducing-Apache-Hudi-support-with-AWS-Glue-crawlers.png
 tags:
 - aws
