--- a/website/blog/2023-12-13-what-is-apache-hudi.mdx
+++ b/website/blog/2023-12-13-what-is-apache-hudi.mdx
@@ -2,7 +2,7 @@
 title: "What is Apache Hudi"
 excerpt: "What is Apache Hudi"
 author: Karim Faiz
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2023-12-13-what-is-apache-hudi.png
 tags:
 - beginner
