--- a/website/blog/2024-01-05-Small-Talk-about-Apache-Hudi.mdx
+++ b/website/blog/2024-01-05-Small-Talk-about-Apache-Hudi.mdx
@@ -2,7 +2,7 @@
 title: "Small Talk about Apache Hudi"
 excerpt: "Small Talk about Apache Hudi"
 author: Ashok Kumar Kunkala
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2024-01-05-Small-Talk-about-Apache-Hudi.png
 tags:
 - beginner
