--- a/website/blog/2024-01-11-In-House-Data-Lake-with-CDC-Processing-Hudi-Docker.mdx
+++ b/website/blog/2024-01-11-In-House-Data-Lake-with-CDC-Processing-Hudi-Docker.mdx
@@ -2,7 +2,7 @@
 title: "In-House Data Lake with CDC Processing, Hudi, Docker"
 excerpt: "In-House Data Lake with CDC Processing, Hudi, Docker"
 author: Rahul
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2024-01-11-In-House-Data-Lake-with-CDC-Processing-Hudi-Docker.png
 tags:
 - docker
