--- a/website/blog/2024-01-24-Use-Amazon-Athena-with-Spark-SQL-for-your-open-source-transactional-table-formats.mdx
+++ b/website/blog/2024-01-24-Use-Amazon-Athena-with-Spark-SQL-for-your-open-source-transactional-table-formats.mdx
@@ -2,7 +2,7 @@
 title: "Use Amazon Athena with Spark SQL for your open-source transactional table formats"
 excerpt: "Use Amazon Athena with Spark SQL for your open-source transactional table formats"
 author: Pathik Shah, Raj Devnath
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2024-01-24-Use-Amazon-Athena-with-Spark-SQL-for-your-open-source-transactional-table-formats.png
 tags:
 - beginner
