--- a/website/blog/2024-01-30-Leverage-Partition-Paths-of-your-data-lake-tables-to-Optimize-Data-Retrieval-Costs-on-the-cloud.mdx
+++ b/website/blog/2024-01-30-Leverage-Partition-Paths-of-your-data-lake-tables-to-Optimize-Data-Retrieval-Costs-on-the-cloud.mdx
@@ -2,7 +2,7 @@
 title: "Leverage Partition Paths of your data lake tables to Optimize Data Retrieval Costs on the cloud"
 excerpt: "Leverage Partition Paths of your data lake tables to Optimize Data Retrieval Costs on the cloud"
 author: Krishna Prasad
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2024-01-30-Leverage-Partition-Paths-of-your-data-lake-tables-to-Optimize-Data-Retrieval-Costs-on-the-cloud.png
 tags:
 - aws
