--- a/website/blog/2024-02-04-Apache-Hudi-Managing-Partition-on-a-petabyte-scale-table.mdx
+++ b/website/blog/2024-02-04-Apache-Hudi-Managing-Partition-on-a-petabyte-scale-table.mdx
@@ -2,7 +2,7 @@
 title: "Apache Hudi: Managing Partition on a petabyte-scale table"
 excerpt: "Apache Hudi: Managing Partition on a petabyte-scale table"
 author: Krishna Prasad
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2024-02-04-Apache-Hudi-Managing-Partition-on-a-petabyte-scale-table.png
 tags:
 - aws
