--- a/website/blog/2024-02-23-Enabling-near-real-time-data-analytics-on-the-data-lake.mdx
+++ b/website/blog/2024-02-23-Enabling-near-real-time-data-analytics-on-the-data-lake.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Enabling near real-time data analytics on the data lake"
 author: Shi Kai Ng and Shuguang Xiang
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2024-02-23-Enabling-near-real-time-data-analytics-on-the-data-lake.jpg
 tags:
 - bi
