--- a/website/blog/2024-03-14-Modern-Datalakes-with-Hudi--MinIO--and-HMS.mdx
+++ b/website/blog/2024-03-14-Modern-Datalakes-with-Hudi--MinIO--and-HMS.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Modern Datalakes with Hudi, MinIO, and HMS"
 author: Brenna Buuck
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2024-03-14-Modern-Datalakes-with-Hudi--MinIO--and-HMS.jpg
 tags:
 - apache hive
