--- a/website/blog/2024-03-22-data-lake-cost-optimisation-strategies.mdx
+++ b/website/blog/2024-03-22-data-lake-cost-optimisation-strategies.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Cost Optimization Strategies for scalable Data Lakehouse"
 author: Suresh Hasundi
-category: deep-dive
+category: case-study
 image: /assets/images/blog/2024-03-22-data-lake-cost-optimisation-strategies.png
 tags:
 - aws
