--- a/website/blog/2024-03-23-options-on-kafka-sink-to-open-table-formats-apache-iceberg-and-apache-hudi.mdx
+++ b/website/blog/2024-03-23-options-on-kafka-sink-to-open-table-formats-apache-iceberg-and-apache-hudi.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Options on Kafka sink to open table Formats: Apache Iceberg and Apache Hudi"
 author: Albert Wong
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2024-03-23-options-on-kafka-sink-to-open-table-formats-apache-iceberg-and-apache-hudi.png
 tags:
 - apache iceberg
