--- a/website/blog/2024-05-19-apache-hudi-on-aws-glue.mdx
+++ b/website/blog/2024-05-19-apache-hudi-on-aws-glue.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Apache Hudi on AWS Glue"
 authors: [sagar-lakshmipathy]
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2024-05-19-apache-hudi-on-aws-glue.png
 tags:
 - aws
