--- a/website/blog/2024-06-07-apache-hudi-a-deep-dive-with-python-code-examples.mdx
+++ b/website/blog/2024-06-07-apache-hudi-a-deep-dive-with-python-code-examples.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Apache Hudi: A Deep Dive with Python Code Examples"
 author: Harsh Daiya
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2024-06-07-apache-hudi-a-deep-dive-with-python-code-examples.png
 tags:
 - python
