--- a/website/blog/2024-09-09-use-apache-hudi-tables-in-athena-for-spark.mdx
+++ b/website/blog/2024-09-09-use-apache-hudi-tables-in-athena-for-spark.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Use Apache Hudi tables in Athena for Spark"
 author: Amazon
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2024-06-07-apache-hudi-a-deep-dive-with-python-code-examples.png
 tags:
 - aws
