--- a/website/blog/2024-10-23-Using-Apache-Hudi-with-Apache-Flink.mdx
+++ b/website/blog/2024-10-23-Using-Apache-Hudi-with-Apache-Flink.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Using Apache Hudi with Apache Flink"
 author: amazon
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2024-06-07-apache-hudi-a-deep-dive-with-python-code-examples.png
 tags:
 - apache flink
