--- a/website/blog/2025-01-30-an-intro-to-hudi-with-minio.mdx
+++ b/website/blog/2025-01-30-an-intro-to-hudi-with-minio.mdx
@@ -1,7 +1,7 @@
 ---
 title: "An intro to Hudi with MinIO"
 author: Simbu
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2025-01-30-an-intro-to-hudi-with-minio.jpeg
 tags:
 - minio
