--- a/website/blog/2025-02-25-curious-engineering-facts-trace-agents-hudi-daft-1.mdx
+++ b/website/blog/2025-02-25-curious-engineering-facts-trace-agents-hudi-daft-1.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Curious Engineering Facts ( Trace Agents | Hudi| Daft : 1) : March Release 18 : 25"
 author: Gayan Sanjeewa
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2025-02-25-curious-engineering-facts-trace-agents-hudi-daft-1.jpeg
 tags:
 - daft
