--- a/website/blog/2025-03-13-lightning-fast-analytics.mdx
+++ b/website/blog/2025-03-13-lightning-fast-analytics.mdx
@@ -1,7 +1,7 @@
 ---
 title: "From Transactional Bottlenecks to Lightning-Fast Analytics"
 author: Akash Sankritya
-category: deep-dive
+category: case-study
 image: /assets/images/blog/lightning-fast-analytics.jpeg
 tags:
 - apache kafka
