--- a/website/blog/2025-03-26-uptycs.mdx
+++ b/website/blog/2025-03-26-uptycs.mdx
@@ -1,7 +1,7 @@
 ---
 title: "From Transactional Bottlenecks to Lightning-Fast Analytics"
 author: Akash, Anudeep, Rohan
-category: deep-dive
+category: case-study
 image: /assets/images/blog/uptycs.png
 tags:
 - cdc
