--- a/website/blog/2025-08-29-building-a-rag-based-ai-recommender-2.mdx
+++ b/website/blog/2025-08-29-building-a-rag-based-ai-recommender-2.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Building a RAG-based AI Recommender (2/2)"
 authors: [xushiyan]
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2025-08-29-building-a-rag-based-ai-recommender-2.jpg
 tags:
 - ai
