--- a/website/blog/2025-12-03-Mastering-Schema-Evolution-with-Apache-Hudi.mdx
+++ b/website/blog/2025-12-03-Mastering-Schema-Evolution-with-Apache-Hudi.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Mastering Schema Evolution with Apache Hudi"
 author: Shaik Sameer
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2025-12-03-Mastering-Schema-Evolution-with-Apache-Hudi/2025-12-03-Mastering-Schema-Evolution-with-Apache-Hudi.png
 tags:
 - schema
