add example to illustrate the scenarios for reading inflight instants

--- a/rfc/rfc-102/rfc-102.md
+++ b/rfc/rfc-102/rfc-102.md
@@ -97,10 +97,29 @@ the checkpoint ack event.
 On job restart or task failover, there is use case that the checkpoint succeeds on Flink while the instant is not committed to Hudi due to the two-phase commit mechanism for these cases:
 
 1. the ack msg is missing;
-2. the ack msg received but the job got restarted during the instant commit;
-3. the task fails over from a checkpoint with its ack msg not received yet(or received but has not complete the instant commit to Hudi).
+2. the ack msg received but the job got restarted during the instant commit:
+   1. all the write metadata from one checkpoint are collected into the coordinator and ready for committing;
+   2. the ack msg got received;
+   3. the coordinator starts to commit the instant with the write metadata list;
+   4. the job got restarted or just got crushed for some reason;
+   5. thus left the instant uncommitted while the checkpoint is actually successful.
+3. the task fails over from a checkpoint with its ack msg not received yet:
+   1. all the write metadata from one checkpoint(`ckp_n`) are collected into the coordinator and ready for committing;
+   2. the checkpoint succeeds with the ack msg not received yet;
+   3. the task fails in the current checkpoint, recovers from `ckp_n`;
+   4. thus left the instant uncommitted while the checkpoint is actually successful;
+   5. the ack msg finally got received.
+   6. for the time-gap between step4 and step5, the `BucketAssigner` needs to access the uncommitted instant since its checkpoint is successful so valid.
+4. the task fails over from a checkpoint with its ack received but has not complete the instant commit to Hudi:
+   1. all the write metadata from one checkpoint(`ckp_n`) are collected into the coordinator and ready for committing;
+   2. the ack msg got received;
+   3. the coordinator starts to commit the instant with the write metadata list;
+   4. the task fails in the current checkpoint, recovers from `ckp_n`;
+   5. thus left the instant uncommitted while the checkpoint is actually successful;
+   6. step3 finished and the instant got committed;
+   7. for the time-gap between step4 and step6, the `BucketAssigner` needs to access the uncommitted instant since its checkpoint is successful so valid.
 
-For DT metadata, the pipeline will recommit the instant with the recovered table metadata, because the `BucketAssigner` operator is the upstream operator of `StreamWrite` operator, there is time gap for these inflight instants to recommit,
+For DT metadata, the pipeline will recommit the instant with the recovered table metadata, since the `BucketAssigner` operator is the upstream operator of `StreamWrite` operator, there is time gap for these inflight instants to recommit,
 and we do not want to block the processing of `BucketAssigner`(to wait for the inflight instants to recommit successfully). The suggested solution is
 to include these special inflight instants on RLI access queries, basically, we need to support reading inflight instants on MDT.
 
