--- a/website/blog/2026-01-15-using-amazon-emr-deltastreamer-to-stream-data-to-multiple-apache-hudi-tables.mdx
+++ b/website/blog/2026-01-15-using-amazon-emr-deltastreamer-to-stream-data-to-multiple-apache-hudi-tables.mdx
@@ -2,14 +2,11 @@
 title: "Using Amazon EMR DeltaStreamer to stream data to multiple Apache Hudi tables"
 authors:
 - name: AWS Big Data Blog
-category: case-study
+category: how-to
 image: /assets/images/blog/2026-01-15-using-amazon-emr-deltastreamer-to-stream-data-to-multiple-apache-hudi-tables.png
 tags:
 - aws
-- emr
-- deltastreamer
-- streaming
-- apache hudi
+- hudi streamer
 ---
 import Redirect from '@site/src/components/Redirect';
 
