fix graph, add 3rd approach for reference tracking

--- a/rfc/rfc-100/rfc-100.md
+++ b/rfc/rfc-100/rfc-100.md
@@ -170,7 +170,8 @@ file formats in the space and other well-established unstructured file formats.
 The cleaning service will be updated to identify the out-of-line blob references that are managed by Hudi and no longer referenced by any active file slices.
 To identify these references, we have two options:
 1. Scan all active file slices to build a set of referenced blob IDs and then scan the file slices being removed to identify references in the removed slices that are not in the active set.
-2. Maintain an index in the metadata table that tracks all blob references and their reference counts. The cleaner can then use this index to identify unreferenced blobs.
+2. Maintain metadata on the blob references contained in the file in the footer or metadata section of each base and log file. The cleaner can then read this metadata to identify blob references in the removed slices and check if they are still referenced in active slices.
+3. Maintain an index in the metadata table that tracks all blob references and their reference counts. The cleaner can then use this index to identify unreferenced blobs.
 
 **Note**: This is only required for out-of-line blobs that are managed by Hudi. Out-of-line blobs that are not managed by Hudi will not be deleted by the cleaner. This will be part of `Phase 2` of the writer implementation.
 
@@ -212,8 +213,8 @@ graph TD;
     B-->C[Add out-of-line blob writer support, finish writer phase 1];
     C-->D[Writer phase 2: dynamic inline/out-of-line storage];
     D-->E[Update cleaning service for managed out-of-line blobs];
-    D-->E[Implement blob compaction];
-    D-->E[Update clustering to handle blob references];
+    D-->F[Implement blob compaction];
+    D-->G[Update clustering to handle blob references];
 ```
 
 ## Rollout/Adoption Plan
